cmake_minimum_required(VERSION 3.12)
project(main)

set(MIN_COMPILE "-O2 -Os -DNDEBUG -s")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${MIN_COMPILE}")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${MIN_COMPILE}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/cmake-build")

add_executable(1126_standard_mps_mk_particle 1126_standard_mps/mk_particle.cpp)
add_executable(1126_standard_mps_main 1126_standard_mps/main.cpp)
add_executable(1126_standard_mps_main_structure 1126_standard_mps/main_structure.cpp)
add_executable(1126_standard_mps_main_2d 1126_standard_mps/main_2d.cpp)
add_executable(1127_cmps_init20cm 1127_cmps/init20cm.cpp)
add_executable(1127_cmps_initCollapse 1127_cmps/initCollapse.cpp)
add_executable(1127_cmps_main_bucket 1127_cmps/main_bucket.cpp)
add_executable(1127_cmps_main_bucket2 1127_cmps/main_bucket2.cpp)
add_executable(1127_cmps_cmps 1127_cmps/cmps.cpp)
add_executable(1128_mps_mps 1128_mps/mps.cpp)
add_executable(1129_cmps_cmps 1129_cmps/cmps.cpp)
add_executable(1129_cmps_collapse 1129_cmps/initCollapse.cpp)
add_executable(1129_cmps_1m 1129_cmps/init1m.cpp)
# target_link_libraries(1126_standard_mps_dambreak)